added cloud vision api -  work with google cloud storage files to cloud vision api

--- a/notes of gani.ipynb
+++ b/notes of gani.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "# Import Google Credentials in Environ Varaibles\n",
-    "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = r\"infared-78d656138419.JSON\""
+    "os.environ['GOOGLE_APPLICATION_CREDENTIALS'] = r\"infared-81804c88c517.json\""
    ]
   },
   {
